src/terraform/modules/services/storage/azurite/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-azurite-deployment
  namespace: ${namespace}
  annotations:
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0087\", \"comment\": \"Container requirement\"},{\"rule\": \"AC_K8S_0078\", \"comment\": \"Container requirement\"}]"
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: storage-azurite
  template:
    metadata:
      labels:
        tier: backend
        app: storage-azurite
    spec:
      containers:
      - name: storage-azurite-container
        image: mcr.microsoft.com/azure-storage/azurite:${version}
        ports:
        - containerPort: 10000
        - containerPort: 10001
        - containerPort: 10002
        securityContext:
          runAsNonRoot: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: 15m
            memory: 110M
          limits:
            cpu: 15m
            memory: 110M
