src/terraform/modules/services/storage/azurite/templates/ingressroute-queues.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: azuritequeues
  namespace: azurite
spec:
  entryPoints:
    - azuritequeues
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    services:
    - name: storage-azurite
      port: 10001
